# nexus-agenticx

./: .gitignore  .gitmodules  .sync-meta.json  AGENTS.md  INSTALL.md  LICENSE  MANIFEST.in  README.md  README_ZN.md  install.sh  mkdocs.yml  pyproject.toml  requirements.txt  setup.py
.githooks/: README.md  commit-msg  install.sh  patterns.local.txt.example  patterns.txt  pre-commit
agenticx/: __init__.py  _optional.py  _version.py  branding.py  presets.py
agenticx/agents/: __init__.py  agent_events.py  query_optimizer_agent_plan.md  react_agent.py  react_agent_async.py
agenticx/avatar/: __init__.py  group_chat.py  registry.py
agenticx/brain/: __init__.py  manager.py  mount.py  registry.py  routes.py  runtime_code.py  runtime_docs.py  search.py  synthesis.py  types.py  wiki_compiler.py  wiki_graph.py  wiki_ops.py
agenticx/cc_bridge/: __init__.py  http_app.py  ndjson.py  session_manager.py  settings.py  tui_parser.py
agenticx/cli/: README.md  __init__.py  agent_loop.py  agent_tools.py  cc_bridge_commands.py  client.py  codegen_engine.py  config_commands.py  config_manager.py  generate_commands.py  hooks_commands.py  intent_classifier.py  log_config.py  main.py  mcp_discovery.py  mcp_schema.json  memory_graph_commands.py  skills_commands.py  studio.py  studio_mcp.py  studio_skill.py  volcengine_commands.py
agenticx/code_index/: NOTICE  __init__.py  config.py  format.py  manager.py  state.py  tools.py
agenticx/collaboration/: README.md  __init__.py  base.py  config.py  conversation.py  delegation.py  enums.py  manager.py  metrics.py  role_playing.py  task_lock.py
agenticx/core/: __init__.py  adapters.py  agent.py  agent_builder.py  agent_executor.py  background.py  config_watcher.py  context_compiler.py  discovery.py  error_handler.py  event.py  execution_lane.py  executor.py  guiderails.py  handoff.py  interruption.py  marketplace.py  memory_extraction.py  message.py  overflow_recovery.py  plan_storage.py  platform.py  prompt.py  reflector.py  security.py  self_repair.py  stream_accumulator.py  task.py  task_validator.py  token_counter.py  tool.py  tool_v2.py  workflow.py
agenticx/data_sources/: __init__.py  base.py  catalog.py  credential_store.py  errors.py  registry.py
agenticx/delivery/: __init__.py  bootstrap.py  config.py  orchestrator.py  plan_mdc.py  stages.py  store.py  worktree.py
agenticx/embeddings/: bailian.py  bailian_embedding_doc.md  siliconflow.py
agenticx/evaluation/: __init__.py  evalset.py  trace_converter.py
agenticx/extensions/: __init__.py  bundle.py  installer.py  registry_hub.py  skill_watcher.py  skillhub_adapter.py
agenticx/flow/: base.py  execution_plan.py  execution_plan_manager.py  state.py  types.py
agenticx/gateway/: __init__.py  app.py  client.py  config.py  connect_page.py  connect_session.py  crypto_utils.py  device_manager.py  feishu_longconn.py  im_confirm.py  models.py  router.py  user_device_map.py
agenticx/hooks/: __init__.py  config.py  declarative.py  fire_and_forget.py  frontmatter.py  list_api.py  llm_hooks.py  loader.py  registry.py  status.py  tool_hooks.py  types.py
agenticx/knowledge/: __init__.py  base.py  config.py  search_orchestration.py
agenticx/learning/: __init__.py  analyzer.py  config.py  drift_detector.py  gepa_proposer.py  instinct.py  instinct_store.py  observer.py  session_review_hook.py  skill_condition_filter.py  skill_deprecation.py  skill_quality_gate.py  skill_usage_tracker.py
agenticx/llms/: __init__.py  ark_provider.py  auth_profile.py  bailian_provider.py  base.py  failover.py  kimi_provider.py  litellm_provider.py  llm_factory.py  minimax_provider.py  provider_display.py  provider_fault.py  provider_resolver.py  qianfan_provider.py  response.py  response_cache.py  transcript_sanitizer.py  vision.py  zhipu_provider.py
agenticx/longrun/: __init__.py  bootstrap.py  orchestrator.py  retry_policy.py  stall_detector.py  studio_routes.py  task_hooks.py  task_workspace.py  token_accountant.py
agenticx/memory/: README.md  __init__.py  base.py  camel_memories.py  compaction_flush.py  hybrid_search.py  mem0_memory.py  message_timestamp_backfill.py  recall.py  session_store.py  timestamp_pollution_repair.py  turn_archive_config.py  workspace_memory.py
agenticx/observability/: README.md  evaluation.py  gaia_adapter.py  gaia_executor.py  gaia_exporter.py  gaia_loader.py  gaia_model_registry.py  gaia_runner.py  gaia_validator.py  monitoring.py  trajectory.py  utils.py  websocket.py
agenticx/planner/: adaptive_planner.py
agenticx/project_state/: __init__.py  (+8 more)
docs/: architecture_analysis_3layer.md  cc-bridge-protocol.md  changelog.md  cli.md  error-codes.md  faq.md  index.md  pyo3-hybrid-architecture-draft.md  pyo3_hybrid_architecture.md  release-note-guide.md  roadmap.md  rust-migration-feasibility-report.md
scripts/: backfill_message_timestamps.py  doubao_voice_tool_spike.py  measure_tool_loop_context.py  prepare_gaia_level_dataset.py  publish_agenticx.sh  run_gaia_benchmark.py  smoke_cc_bridge_local.sh  verify_production_infrastructure.py
tests/: RAGAS_parsed.md  README.md  demo_e2e_test.py  direct_mcp_test.py  env_template.txt  mineru_output_universal.md  run_core_tests.py  run_llm_tests.py  test_adk_enhancements.py  test_agent_loop.py  test_agent_runtime.py  test_agent_runtime_inline_tool_call.py  test_agent_runtime_visual_injection.py  test_agent_tools.py  test_auto_solve.py  test_backfill_message_timestamps.py  test_browser_use_preflight.py  test_cc_bridge_cwd_resolution.py  test_cc_bridge_http.py  test_cc_bridge_protocol.py  test_cc_bridge_pty_stream.py  test_cc_bridge_send_mode_resolution.py  test_cc_bridge_settings.py  test_cc_bridge_tui_parser.py  test_chat_attachments.py  test_chat_history_dedupe.py  test_chat_turn_interruption_notice.py  test_chunk_rerank_config.py  test_cli_codegen_engine.py  test_cli_config_manager.py  test_cli_generate_commands.py  test_cli_main_safety.py  test_cli_studio.py  test_compactor.py  test_completeness_truth.py  test_context_budget.py  test_context_compiler.py  test_core.py  test_deepseek_interactive.py  test_default_session_workspace.py  (+347 more)
(+566 files in other folders)
